--- a/src/index.less
+++ b/src/index.less
@@ -29,6 +29,16 @@ p, h1,h2,h3,h4,h5{
   width: 100%;
   background-color: rgba(0,0,0,0.2);
   z-index: 999;
+  .nologin {
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    line-height: 80px;
+    left: calc(75% + 300px);
+    overflow: hidden;
+    color: white;
+    top: 0;
+  }
   .userImg {
     position: absolute;
     width: 40px;
