--- a/src/page/user/user.less
+++ b/src/page/user/user.less
@@ -9,108 +9,137 @@
   width: 100%;
   .userinfoBox {
     background-color: #1a1a1a;
-    height: 440px;
+    height: 360px;
     padding-top: 80px;
     .userinfo{
-      width: 600px;
+      width: 1200px;
       margin: 0 auto;
       position: relative;
       padding-top: 20px;
       text-align: center;
-      .imgbox {
-        height: 120px;
-        width: 120px;
-        margin: 0 auto;
-        border-radius: 50%;
-        cursor: pointer;
-        position: relative;
-        display: block;
-        .edit {
-          width: 100%;
-          height: 100%;
-          position: absolute;
-          top: 0;
-          left: 0;
-          border-radius:  50% ;
-          background-color: #1a1a1a;
-          display: block;
-          line-height: 120px;
-          color: white;
-          display: none;
-        }
-        img {
-          width: 100%;
-          height: 100%;
-          position: absolute;
-          top: 0;
-          left: 0;
-          overflow: hidden;
-          border-radius:  50% ;
-          transition: 0.5s transform;
-        }
-        .shadowBox {
-          width: 100%;
-          height: 100%;
-          top: 0;
+      padding-top: 40px;
+      .userLeft{
+        width: 200px;
+        float: left;
+        .imgbox {
+          height: 120px;
+          width: 120px;
+          margin: 0 auto;
           border-radius: 50%;
-          position: absolute;
-          -webkit-box-shadow: inset 0.5em -0.5em #f7efab;
-          box-shadow: inset 0.5em -0.5em #f7efab;
-          -webkit-animation: spin2 2s linear infinite;
-          animation: spin2 2s linear infinite;
-          opacity: 0.6;
-          animation-delay: 2s;
-          &::before, &::after {
-            position: absolute;
-            content: "";
+          cursor: pointer;
+          position: relative;
+          display: block;
+          .edit {
             width: 100%;
             height: 100%;
-            overflow: inherit;
-            background: inherit;
-            border-radius: inherit;
-            -webkit-animation: spin1 8s linear both;
-            animation: spin1 8s linear both;
-            animation-delay: 2s;
+            position: absolute;
+            top: 0;
             left: 0;
-          }
-          &::after {
-            filter: blur(10px);
-          }
-          &::before {
-            filter: blur(5px);
-          }
-        }
-        &.is {
-          .edit {
+            border-radius:  50% ;
+            background-color: #1a1a1a;
             display: block;
+            line-height: 120px;
+            color: white;
+            display: none;
           }
-          &:hover {
-            img {
-              transform: rotateY(180deg);
-              transform-origin: 0% 50%;
+          img {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            overflow: hidden;
+            border-radius:  50% ;
+            transition: 0.5s transform;
+          }
+          .shadowBox {
+            width: 100%;
+            height: 100%;
+            top: 0;
+            border-radius: 50%;
+            position: absolute;
+            -webkit-box-shadow: inset 0.5em -0.5em #f7efab;
+            box-shadow: inset 0.5em -0.5em #f7efab;
+            -webkit-animation: spin2 2s linear infinite;
+            animation: spin2 2s linear infinite;
+            opacity: 0.6;
+            animation-delay: 2s;
+            &::before, &::after {
+              position: absolute;
+              content: "";
+              width: 100%;
+              height: 100%;
+              overflow: inherit;
+              background: inherit;
+              border-radius: inherit;
+              -webkit-animation: spin1 8s linear both;
+              animation: spin1 8s linear both;
+              animation-delay: 2s;
+              left: 0;
             }
-            .shadowBox {
-              opacity: 0.2;
+            &::after {
+              filter: blur(10px);
+            }
+            &::before {
+              filter: blur(5px);
+            }
+          }
+          &.is {
+            .edit {
+              display: block;
+            }
+            &:hover {
+              img {
+                transform: rotateY(180deg);
+                transform-origin: 0% 50%;
+              }
+              .shadowBox {
+                opacity: 0.2;
+              }
             }
           }
         }
       }
-      h3 {
-        font-size: 16px;
-        font-weight: 600;
-        margin: 10px 0;
-        text-align: center;
-        color: white;
+      .userRight {
+        margin-left: 40px;
+        width: 600px;
+        float: left;
+        text-align: left;
+        h3 {
+          font-size: 16px;
+          font-weight: 600;
+          margin: 10px 0;
+          color: white;
+        }
+        p {
+          font-size: 12px;
+        }
+        .dis {
+          margin-top: 20px;
+          font-size: 12px;
+          height: 60px;
+          line-height: 20px;
+          text-overflow: ellipsis;
+        }
       }
-      p {
-        font-size: 12px;
-        text-align: center;
-      }
-      .dis {
-        font-size: 12px;
-        height: 60px;
-        line-height: 20px;
-        text-overflow: ellipsis;
+      .fansBox {
+        display: flex;
+        justify-content: space-around;
+        position: absolute;
+        right: 200px;
+        top: 160px;
+        .fans {
+          padding: 0 20px;
+          text-align: center;
+          span {
+            display: block;
+            color: white;
+          }
+          &:first-child{
+            border-right: 1px solid #888;
+          }
+        }
+
       }
       button {
         border: 2px white solid;
@@ -122,246 +151,146 @@
       }
     }
   }
-  .pagBox{
-    width: 100%;
+  .bottomBox {
+    min-height: 800px;
     background-color: white;
-    .pag{
+    .bottomContent {
       width: 1200px;
       margin: 0 auto;
-      padding: 20px 0;
-      min-height: 800px;
-      .ant-tabs {
-        .tablist{
-          .ant-tabs-tab-btn {
-            color: black;
-            font-weight: 600;
-          }
-        }
-      }
-      .listbox {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        .list {
-          display: block;
-          position: relative;
-          &.list1 {
-            width: 22%;
-            margin: 20px 0;
-            img {
-              width: 100%;
-              height: 300px;
-            }
-            h3 {
-              display: flex;
-              justify-content: space-between;
-              font-size: 16px;
-              background-color: black;
-              margin: 0;
-              padding: 5px 10px;
-              span {
-                color: white;
-              }
-              .name {
-                color: white;
-              }
-              .price {
-                color: orange;
-                font-size: 20px;
-              }
-              .anticon {
-                display: inline-block;
-                cursor: pointer;
-              }
-              .anticon-heart {
-                margin:0 10px;
-              }
-              .anticon-eye {
-                color: white;
-                font-size: 14px;
-              }
-            }
-          }
-          &.list2 {
-            width: 22%;
-            margin: 20px 0;
-            img {
-              width: 100%;
-              height: 300px;
-            }
-            h3 {
-              display: flex;
-              justify-content: space-between;
-              font-size: 16px;
-              background-color: black;
-              margin: 0;
-              padding: 5px 10px;
-              span {
-                color: white;
-              }
-              .name {
-                color: white;
-              }
-              .price {
-                color: orange;
-                font-size: 20px;
-              }
-              .anticon {
-                display: inline-block;
-                cursor: pointer;
-              }
-              .anticon-heart {
-                margin:0 10px;
-              }
-              .anticon-eye {
-                color: white;
-                font-size: 14px;
-              }
-            }
-          }
-          &.list3 {
-            width: 22%;
-            margin: 20px 0;
-            img {
-              width: 100%;
-              height: 300px;
-            }
-            h3 {
-              display: flex;
-              justify-content: space-between;
-              font-size: 16px;
-              background-color: black;
-              margin: 0;
-              padding: 5px 10px;
-              span {
-                color: white;
-              }
-              .name {
-                color: white;
-              }
-              .price {
-                color: orange;
-                font-size: 20px;
-              }
-              .anticon {
-                display: inline-block;
-                cursor: pointer;
-              }
-              .anticon-heart {
-                margin:0 10px;
-              }
-              .anticon-eye {
-                color: white;
-                font-size: 14px;
-              }
-            }
-          }
-          &.list5 {
-            width: 22%;
-            margin: 20px 0;
-            img {
-              width: 100%;
-              height: 300px;
-            }
-            h3 {
-              display: flex;
-              justify-content: space-between;
-              font-size: 16px;
-              background-color: black;
-              margin: 0;
-              padding: 5px 10px;
-              span {
-                color: white;
-              }
-              .name {
-                color: white;
-              }
-              .price {
-                color: orange;
-                font-size: 20px;
-              }
-              .anticon {
-                display: inline-block;
-                cursor: pointer;
-              }
-              .anticon-heart {
-                margin:0 10px;
-              }
-              .anticon-eye {
-                color: white;
-                font-size: 14px;
-              }
-            }
-          }
-        }
-        .ant-avatar{
-          width: 100px !important;
-          height: 100px !important;
-        }
-      }
-      .userlist {
-        padding-bottom: 200px;
-        .h3 {
-          font-size: 12px;
-          color: black;
-        }
-        .listbox2 {
-          width: 1200px;
-          .user {
-            width: 32%;
-            float: left;
-            margin-right: 1%;
+      .box {
+        width: 1200px;
+        margin: 0 auto;
+        .search {
+          .searchButton {
             display: flex;
-            height: 120px;
-            justify-content: space-around;
+            justify-content: space-between;
+            .left,.center {
+              button {
+                margin-right: 20px;
+                border: 1px solid black;
+                border-radius: 15px;
+                color: black;
+                background-color: white;
+                &.is {
+                  background-color: black;
+                  color: white;
+                }
+              }
+            }
+            .right {
+            }
+          }
+        }
+        .pagBox {
+          display: flex;
+          justify-content: space-between;
+          flex-wrap: wrap;
+          margin: 20px 0;
+          .list {
+            width: 23%;
+            height: 350px;
             margin: 20px 0;
+            background-color: #232930;
+            position: relative;
+            .type {
+              position: absolute;
+              display: block;
+              top: 190px;
+              width: 40px;
+              height: 60px;
+              line-height: 60px;
+              padding-left:5px ;
+              color: white;
+              z-index: 3;
+              font-size: 30px;
+              font-weight: 600;
+              &.en{
+                font-size: 16px;
+                top: 200px;
+              }
+              &.hn{
+                font-size: 20px;
+                top: 200px;
+              }
+            }
+            &.auction1 {
+              &::before {
+                content: "";
+                border-bottom: 80px solid #57b27a;
+              }
+            }
+            &.auction2 {
+              &::before {
+                content: "";
+                border-bottom: 80px solid #eb973f;
+              }
+            }
+            &.auction3 {
+              &::before {
+                content: "";
+                border-bottom: 80px solid #53abdd;
+              }
+            }
+            &.auction4 {
+              &::before {
+                content: "";
+                border-bottom: 80px solid #c5315c;
+              }
+            }
+            &::before{
+              border-right: 80px solid transparent;
+              position: absolute;
+              top: 170px;
+              left: 0px;
+              z-index: 2;
+            }
             img {
-              width: 30%;
-              height: 100%;
-              
+              width: 100%;
+              height: 250px;
+              display: block;
+              position: relative;
+              cursor: pointer;
+            }
+            h3 {
+              height: 40px;
+              line-height: 40px;
+              display: flex;
+              justify-content: space-between;
+              font-size: 14px;
+              background-color: #232930;
+              color: white;
+              margin: 0;
+              padding: 0 10px;
+              .price {
+                color: #a66f46;
+                font-size: 18px;
+                margin-left: 10px;
+              }
+              .anticon-heart {
+                line-height: 40px;
+              }
+              a {
+                color: white;
+                margin-right: 20px;
+
+                img {
+                  display: inline;
+                  margin: 0 5px;
+                  border-radius: 50%;
+                  height: 20px;
+                  width: 20px;
+                }
+              }
             }
             p {
-              width: 20%;
-              span {
-                padding-top: 50px;
-                height: 20px;
-                display: block;
-                line-height: 100%;
-                white-space: nowrap;
-                text-overflow: ellipsis;
-              }
-              span:first-child{
-                color: #888;
-              }
-              span:last-child {
-                color: black;
-              }
-            }
-            button {
-              width: 40%;
-              background-color: black;
-              color: white;
-              border-radius: 20px;
-              margin-top: 40px;
-              &.is {
-                background-color: white;
-                color: black;
-                border: 1px solid black;
-              }
+              height: 20px;
+              font-size: 12px;
             }
           }
         }
-        .more {
-          position: absolute;
-          bottom: -200px;
-          left: 50%;
-          transform: translateX(-50%);
-          button {
-            padding: 0 20px;
-            border: 2px solid black;
-            color: black;
-            border-radius: 20px;
-          }
+        .ant-pagination {
+          text-align: center;
+          height: 80px;
         }
       }
     }
